// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add and update aircrafts Get aircraft with valid registration should return the aircraft 1`] = `
{
  "active": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "displayName": "Test plane",
  "documents": [],
  "equipment": "test",
  "fuelTypes": [
    "AVGAS",
  ],
  "hourlyRateEur": 100,
  "location": "test",
  "maintenance": {
    "lastMaintenanceDate": "2023-10-01",
    "lastMaintenanceTach": 100,
    "lastMaintenanceType": "100h",
    "maintenanceCycle": 100,
    "nextMaintenanceDate": null,
    "nextMaintenanceTach": 150,
    "nextMaintenanceType": "50h",
    "reservedHours": 2,
    "totalPercentageHours": 5,
  },
  "manufacturer": "Jest",
  "model": "Jest",
  "notes": [],
  "registration": "OH-TST",
  "seats": 2,
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
  "usableFuelLitres": 100,
  "yearOfManufacture": 2000,
}
`;

exports[`Add and update aircrafts Get aircraft with valid registration should return the aircraft 2`] = `
{
  "active": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "displayName": "Test plane 2",
  "documents": [],
  "equipment": "test",
  "fuelTypes": [
    "AVGAS",
  ],
  "hourlyRateEur": 100,
  "imageUrl": null,
  "location": "test",
  "maintenance": {
    "lastMaintenanceDate": "2023-10-01",
    "lastMaintenanceTach": 100,
    "lastMaintenanceType": "100h",
    "maintenanceCycle": 100,
    "nextMaintenanceDate": null,
    "nextMaintenanceTach": 150,
    "nextMaintenanceType": "50h",
    "reservedHours": 2,
    "totalPercentageHours": 5,
  },
  "manufacturer": "Jest",
  "model": "Jest",
  "notes": [],
  "registration": "OH-TST",
  "seats": 2,
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
  "usableFuelLitres": 100,
  "yearOfManufacture": 2000,
}
`;

exports[`GET /aircrafts should return all aircrafts as an admin 1`] = `
[
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DA40",
    "documents": [],
    "equipment": "SDFGY/S",
    "fuelTypes": [
      "JETA-1",
    ],
    "hourlyRateEur": 216,
    "imageUrl": "https://www.flyfinland.fi/photos/original/29416.jpg",
    "location": "EFNU BF-hangar 21",
    "maintenance": {
      "lastMaintenanceDate": "2024-11-10",
      "lastMaintenanceTach": 4709,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 100,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 4778,
      "nextMaintenanceType": "100h",
      "reservedHours": 8,
      "totalPercentageHours": 10,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DA40",
    "notes": [
      {
        "severity": "note",
        "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
      },
    ],
    "registration": "OH-STL",
    "seats": 4,
    "status": {
      "cautions": [],
      "lastLandingAirport": "EFHK",
      "lastLandingTimeUtc": "2025-03-03T12:00:00.000Z",
      "remainingFuelLitres": 10,
      "tachUntilNextMaintenance": -6,
      "totalTime": "4783:20",
      "usableHours": -4,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 148,
    "yearOfManufacture": 2007,
  },
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DV20",
    "documents": [],
    "equipment": "VOY/S",
    "fuelTypes": [
      "AVGAS",
      "MOGAS",
    ],
    "hourlyRateEur": 147,
    "imageUrl": "https://cdn.jetphotos.com/full/5/69415_1600241420.jpg",
    "location": "EFNU Cumulus Hangar",
    "maintenance": {
      "lastMaintenanceDate": "2025-03-01",
      "lastMaintenanceTach": 6085,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 6130,
      "nextMaintenanceType": "50h",
      "reservedHours": 3,
      "totalPercentageHours": 5,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DV20",
    "notes": [
      {
        "severity": "caution",
        "text": "Koneen palosammutin on huollossa. Ei ole pakollinen varuste, mutta huomioitava!",
      },
    ],
    "registration": "OH-IHQ",
    "seats": 2,
    "status": {
      "cautions": [],
      "lastLandingAirport": "EFTP",
      "lastLandingTimeUtc": "2025-03-02T11:20:00.000Z",
      "remainingFuelLitres": 60,
      "tachUntilNextMaintenance": 11,
      "totalTime": "6118:40",
      "usableHours": 13,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 77,
    "yearOfManufacture": 2010,
  },
  {
    "active": false,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Piper PA-28",
    "documents": [],
    "equipment": "SFD",
    "fuelTypes": [
      "AVGAS",
    ],
    "hourlyRateEur": 228,
    "imageUrl": "https://cdn.jetphotos.com/full/6/927368_1715977239.jpg",
    "location": "EFNU",
    "maintenance": {
      "lastMaintenanceDate": "2024-04-15",
      "lastMaintenanceTach": 5180,
      "lastMaintenanceType": "50h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": "2025-05-05",
      "nextMaintenanceTach": 5230,
      "nextMaintenanceType": "50h",
      "reservedHours": 2,
      "totalPercentageHours": 5,
    },
    "manufacturer": "Piper Aircraft",
    "model": "PA-28",
    "notes": [
      {
        "severity": "warning",
        "text": "Waiting for annual",
      },
    ],
    "registration": "OH-P28",
    "seats": 4,
    "status": {
      "cautions": [],
      "daysUntilNextMaintenance": 0,
      "lastLandingAirport": "EFHK",
      "lastLandingTimeUtc": "2025-03-04T13:20:00.000Z",
      "remainingFuelLitres": 10,
      "tachUntilNextMaintenance": -1,
      "totalTime": "5230:10",
      "usableHours": 2,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 182,
    "yearOfManufacture": 2005,
  },
]
`;

exports[`GET /aircrafts should return only active aircrafts as a admin without sudo 1`] = `
[
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DA40",
    "documents": [],
    "equipment": "SDFGY/S",
    "fuelTypes": [
      "JETA-1",
    ],
    "hourlyRateEur": 216,
    "imageUrl": "https://www.flyfinland.fi/photos/original/29416.jpg",
    "location": "EFNU BF-hangar 21",
    "maintenance": {
      "lastMaintenanceDate": "2024-11-10",
      "lastMaintenanceTach": 4709,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 100,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 4778,
      "nextMaintenanceType": "100h",
      "reservedHours": 8,
      "totalPercentageHours": 10,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DA40",
    "notes": [
      {
        "severity": "note",
        "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
      },
    ],
    "registration": "OH-STL",
    "seats": 4,
    "status": {
      "cautions": [],
      "lastLandingAirport": "EFHK",
      "lastLandingTimeUtc": "2025-03-03T12:00:00.000Z",
      "remainingFuelLitres": 10,
      "tachUntilNextMaintenance": -6,
      "totalTime": "4783:20",
      "usableHours": -4,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 148,
    "yearOfManufacture": 2007,
  },
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DV20",
    "documents": [],
    "equipment": "VOY/S",
    "fuelTypes": [
      "AVGAS",
      "MOGAS",
    ],
    "hourlyRateEur": 147,
    "imageUrl": "https://cdn.jetphotos.com/full/5/69415_1600241420.jpg",
    "location": "EFNU Cumulus Hangar",
    "maintenance": {
      "lastMaintenanceDate": "2025-03-01",
      "lastMaintenanceTach": 6085,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 6130,
      "nextMaintenanceType": "50h",
      "reservedHours": 3,
      "totalPercentageHours": 5,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DV20",
    "notes": [
      {
        "severity": "caution",
        "text": "Koneen palosammutin on huollossa. Ei ole pakollinen varuste, mutta huomioitava!",
      },
    ],
    "registration": "OH-IHQ",
    "seats": 2,
    "status": {
      "cautions": [],
      "lastLandingAirport": "EFTP",
      "lastLandingTimeUtc": "2025-03-02T11:20:00.000Z",
      "remainingFuelLitres": 60,
      "tachUntilNextMaintenance": 11,
      "totalTime": "6118:40",
      "usableHours": 13,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 77,
    "yearOfManufacture": 2010,
  },
]
`;

exports[`GET /aircrafts should return only active aircrafts as a user 1`] = `
[
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DA40",
    "documents": [],
    "equipment": "SDFGY/S",
    "fuelTypes": [
      "JETA-1",
    ],
    "hourlyRateEur": 216,
    "imageUrl": "https://www.flyfinland.fi/photos/original/29416.jpg",
    "location": "EFNU BF-hangar 21",
    "maintenance": {
      "lastMaintenanceDate": "2024-11-10",
      "lastMaintenanceTach": 4709,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 100,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 4778,
      "nextMaintenanceType": "100h",
      "reservedHours": 8,
      "totalPercentageHours": 10,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DA40",
    "notes": [
      {
        "severity": "note",
        "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
      },
    ],
    "registration": "OH-STL",
    "seats": 4,
    "status": {
      "cautions": [],
      "lastLandingAirport": "EFHK",
      "lastLandingTimeUtc": "2025-03-03T12:00:00.000Z",
      "remainingFuelLitres": 10,
      "tachUntilNextMaintenance": -6,
      "totalTime": "4783:20",
      "usableHours": -4,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 148,
    "yearOfManufacture": 2007,
  },
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DV20",
    "documents": [],
    "equipment": "VOY/S",
    "fuelTypes": [
      "AVGAS",
      "MOGAS",
    ],
    "hourlyRateEur": 147,
    "imageUrl": "https://cdn.jetphotos.com/full/5/69415_1600241420.jpg",
    "location": "EFNU Cumulus Hangar",
    "maintenance": {
      "lastMaintenanceDate": "2025-03-01",
      "lastMaintenanceTach": 6085,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 6130,
      "nextMaintenanceType": "50h",
      "reservedHours": 3,
      "totalPercentageHours": 5,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DV20",
    "notes": [
      {
        "severity": "caution",
        "text": "Koneen palosammutin on huollossa. Ei ole pakollinen varuste, mutta huomioitava!",
      },
    ],
    "registration": "OH-IHQ",
    "seats": 2,
    "status": {
      "cautions": [],
      "lastLandingAirport": "EFTP",
      "lastLandingTimeUtc": "2025-03-02T11:20:00.000Z",
      "remainingFuelLitres": 60,
      "tachUntilNextMaintenance": 11,
      "totalTime": "6118:40",
      "usableHours": 13,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "usableFuelLitres": 77,
    "yearOfManufacture": 2010,
  },
]
`;

exports[`GET /aircrafts/id Get aircraft with valid registration should return the aircraft 1`] = `
{
  "active": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "displayName": "Diamond DA40",
  "documents": [],
  "equipment": "SDFGY/S",
  "fuelTypes": [
    "JETA-1",
  ],
  "hourlyRateEur": 216,
  "imageUrl": "https://www.flyfinland.fi/photos/original/29416.jpg",
  "location": "EFNU BF-hangar 21",
  "maintenance": {
    "lastMaintenanceDate": "2024-11-10",
    "lastMaintenanceTach": 4709,
    "lastMaintenanceType": "200h",
    "maintenanceCycle": 100,
    "nextMaintenanceDate": null,
    "nextMaintenanceTach": 4778,
    "nextMaintenanceType": "100h",
    "reservedHours": 8,
    "totalPercentageHours": 10,
  },
  "manufacturer": "Diamond Aircraft",
  "model": "DA40",
  "notes": [
    {
      "severity": "note",
      "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
    },
  ],
  "registration": "OH-STL",
  "seats": 4,
  "status": {
    "cautions": [],
    "lastLandingAirport": "EFHK",
    "lastLandingTimeUtc": "2025-03-03T12:00:00.000Z",
    "remainingFuelLitres": 10,
    "tachUntilNextMaintenance": -6,
    "totalTime": "4783:20",
    "usableHours": -4,
    "warnings": [],
  },
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
  "usableFuelLitres": 148,
  "yearOfManufacture": 2007,
}
`;
